initialized the webgpu

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smaller Project Setup</title>
+    <title>WebGPU Conways GOL</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <canvas class="webgl"></canvas>
+    <canvas class="webGPU" width="512" height="512"></canvas>
     <script type="module" src="./script.js"></script>
 </body>
 </html>
